@@ -20,7 +20,7 @@ editorRulerActionsName=Editor Ruler Actions
 cHelpProviderName=C Help Provider
 nature.name=C Nature
 perspective.name=C/C++
-viewsCategory.name=&C
+viewsCategory.name=&C/C++
 CView.name=C/C++ Projects
 
 AddBlockCommentAction.label= Add &Block Comment
